--- a/HTMoL.html
+++ b/HTMoL.html
@@ -1772,12 +1772,11 @@ Copyright (C) 2014  Alvarez Rivera Leonardo,Becerra Toledo Francisco Javier, Veg
           var panel = document.getElementById("Console");
           if (panel.style.opacity == 1) {
             panel.style.opacity = 0;
-            panel.style.transfor.scaleY(0);
+            //panel.style.transfor.scaleY(0);
 
-    } else if (panel.style.opacity == 0) {
+    } else  {
             panel.style.opacity = 1;
-            panel.style.transfor.scaleY(1);
-
+            //panel.style.transfor.scaleY(1);
           }
 
     }
@@ -1785,7 +1784,7 @@ Copyright (C) 2014  Alvarez Rivera Leonardo,Becerra Toledo Francisco Javier, Veg
     </script>
 </head>
 <body   onload="webGLStart();">
-<div id="Console" class="Console" style="background-color:yellow;width:0;height:0;left:50px;top:300px;position:relative;">
+<div id="Console" class="Console" style="background-color:yellow;width:0;height:0;left:50px;top:300px;position:relative; opacity:1;">
             <div id="console_title"></div>
             <div id="label1"></div>
             <div id="outputdiv" style="width:245px;height:110px;background-color:blue;left:20px;top:20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HTMoL output
