--- a/HTMoL.html
+++ b/HTMoL.html
@@ -1784,16 +1784,16 @@ Copyright (C) 2014  Alvarez Rivera Leonardo,Becerra Toledo Francisco Javier, Veg
     </script>
 </head>
 <body   onload="webGLStart();">
-<div id="Console" class="Console" style="background-color:yellow;width:0;height:0;left:50px;top:300px;position:relative; opacity:1;">
-            <div id="console_title"></div>
-            <div id="label1"></div>
-            <div id="outputdiv" style="width:245px;height:110px;background-color:blue;left:20px;top:20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HTMoL output
-                <textarea id="Console_output" style="width:220px;height:80px;left:10px"></textarea>
-            </div>
-            <div id="console_inputdiv" style="width:245px;height:110px;background-color:white;left:20px;top:20px">&nbsp;&nbsp;&nbsp;Input HTMoL commands
-                <textarea id="Console_input" style="width:220px;height:80px;left:10px" onkeypress="main.onTestChange(event);"></textarea>
-            </div>
-        </div>
+<div id="Console" class="Console" style="background-color:yellow;width:0;height:0;left:50px;top:300px;position:relative;">
+    <div id="console_title"></div>
+    <div id="label1"></div>
+    <div id="console_inputdiv" style="width:245px;height:110px;background-color:white;left:20px;top:20px">&nbsp;&nbsp;&nbsp;Input HTMoL commands
+        <textarea id="Console_input" style="width:220px;height:80px;left:10px" onkeypress="main.onTestChange(event);"></textarea>
+    </div>
+    <div id="outputdiv" style="width:245px;height:110px;background-color:blue;left:20px;top:20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HTMoL output
+        <textarea id="Console_output" style="width:220px;height:80px;left:10px"></textarea>
+    </div>
+</div>
 <div id="Contenedor">
 
     <div id="WebGL-Out"  style="height:0px;"> <!-- not change value -->
